WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250611
Fix internal watchOS build
https://bugs.webkit.org/show_bug.cgi?id=250611
Summary
Fix internal watchOS build
Alex Christensen
Reported
2023-01-13 18:35:15 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-13 18:35:29 PST
<
rdar://problem/104249009
>
Alex Christensen
Comment 2
2023-01-13 18:36:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8650
EWS
Comment 3
2023-01-14 00:07:43 PST
Committed
258910@main
(06560a63a201): <
https://commits.webkit.org/258910@main
> Reviewed commits have been landed. Closing PR #8650 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug