Fix internal watchOS build https://bugs.webkit.org/show_bug.cgi?id=250611 rdar://104249009

Unreviewed.

Some things were deprecated, some headers have #if SOMETHING without defining SOMETHING.

* Source/WebCore/platform/ios/VideoFullscreenInterfaceAVKit.mm:
* Source/WebKit/Platform/spi/watchos/PepperUICoreSPI.h:

Canonical link: https://commits.webkit.org/258910@main